fix: Use commonly implemented value for align-items property

--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,6 +1,6 @@
 :host {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
 }
 
